Checked in 12/28/2016 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -557,6 +557,10 @@ img.riskImage:hover {
     .AddressFieldOnly {
         width: 97%!important;
     }
+    
+    .AddressFieldOnlyB {
+        width: 91%!important;
+    }
 }
 
 /*Projection Salb*/
