--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -1347,6 +1347,22 @@ img.riskImage:hover {
 
 
 /*Prakash*/
+
+.ui-accordion-content {
+    color: #a08d9b!important;
+}
+
+.internalTabs >.ui-accordion-header {
+    background: transparent!important;
+    color: #778db3!important;
+    text-transform: capitalize!important;
+    font-size: 15px!important;
+    font-weight: bold;
+    border-bottom: 2px solid green;
+    border-radius: 0!important;
+    padding: 5px 5px!important;
+}
+
 .editTabsDisabled > .ui-accordion-header {
 	    pointer-events: none!important;
 	        border-radius: 0!important;
@@ -1976,8 +1992,8 @@ Panel-UI > div {
 }
 
 tcmAccordionPanel-UI > .ui-accordion .ui-state-hover, .ui-accordion .ui-state-active {
-    background-color: #05AF6C !important;
-    color: #FFFFFF !important;
+    background-color: #05AF6C ;
+    color: #FFFFFF;
 }
 
 .ui-tabs-top .ui-tabs-nav {
