Abhang Checked in 12/29/2016 MX aggregator Integration in web application Code

--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -1344,9 +1344,37 @@ img.riskImage:hover {
 
 
 
+/*register_buttons_widget*/
+@media (max-width: 500px) {
+    .mobileModeButton {
+        display: block;
+    }
 
+    .desktopModeButton {
+        display: none;
+    }
+}
+
+@media (min-width: 500px) {
+    .desktopModeButton {
+        display: block;
+    }
+
+    .mobileModeButton {
+        display: none;
+    }
+}
+
+.desktopModeButton, .mobileModeButton{
+    margin: 0 auto!important;
+}
 
 /*Prakash*/
+
+#layout-topbar-menu li:hover > form > a {
+    color: #F1F6F9;
+    background-color: #009ABB;
+}
 
 .ui-accordion-content {
     color: #a08d9b!important;
