--- a/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -24,6 +24,15 @@
                         <a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05">New Account</a>
                         </ui:fragment>
                     </li>
+
+                    <li class="MobileModeOnly">
+                            <!--<a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>-->
+                            <!--<a href="/pages/consumer/tcm/aggr/register.xhtml" class="Animated05">Aggregation</a>-->
+                        <h:form>
+                            <h:commandLink action="#{aggrBean.startup('M')}" value="Aggregation" styleClass="Animated05">
+                        </h:commandLink></h:form>
+
+                    </li>
                     <li class="MobileModeOnly">
                         <a href="#{uiLayout.defaultHome}" class="Animated05"><i class="fa fa-home"></i> Dashboard</a>
                     </li>
