--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -258,8 +258,8 @@ img.riskImage:hover {
     }
 
     .ui-selectonemenu label.ui-selectonemenu-label {
-        color: #778D9B!important;
-        padding: 7px 1px!important;
+        /* color: #778D9B!important; */
+        padding: 7px 7px!important;
     }
 
     .MiddleInitialWidth, .MiddleInitialWidthB {
@@ -268,6 +268,7 @@ img.riskImage:hover {
         border-radius: 3px!important;
     }
 }
+
 
 @media (min-width: 635px) and (max-width: 890px) {
     .Margin-FAAddress {
@@ -1128,11 +1129,95 @@ img.riskImage:hover {
 }
 
 /**New Version Dashboard**/
+
+
+
+/*dropdown*/
+.customMenuButtonDashboard > button > span:nth-child(1) {
+	/*     background-color: black!important; */
+    border-radius: 16px!important;
+    background-size: 12px!important;
+    background-image: url("/javax.faces.resource/images/down.png.xhtml?ln=tcm")!important;
+}
+
+.InfoNewDash > button > span:nth-child(2) {
+    background: whitesmoke!important;
+    color: #778D9B!important;
+    border-radius: 40px!important;
+    font-size: 13px;
+}
+
+.InfoNewDash > button {
+    border-radius: 40px!important;
+}
+
+@media (min-width: 745px) {
+.dsahboardEditDropdownBlock {
+    float: right;
+    margin-right:5px;
+}
+}
+
+@media (max-width: 744px) and (min-width: 736px) {
+.editDropdownSelect > .ui-selectonemenu-trigger {
+	    height: 30px!important;
+}
+}
+
+@media (max-width: 735px) {
+.editDropdownSelect > .ui-selectonemenu-trigger {
+	    height: 27px!important;
+}
+}
+
+@media (max-width: 744px) {
+	.dsahboardEditDropdownBlock {
+	position: absolute;
+    right: 0;
+    margin-top: -85px;
+    width: 225px;
+	}
+
+.editDropdownSelect > .ui-selectonemenu-trigger > span	{
+    margin-top: 5px!important;
+}
+
+
+}
+
+@media (max-width: 370px) {
+	.dsahboardEditDropdownBlock {
+    width: 200px;
+	}
+}
+
+.dropdownDashboardTable {
+    position: absolute;
+    right: 240px;
+    margin-top: 7px;
+}
+
+.editDropdownSelect > label {
+	font-size: 13px!important;
+}
+
+.editDropdownSelect {
+    border-radius: 0px!important;
+    border-color: #c3ccd5!important;
+}
+
+.editDropdownSelect > .ui-selectonemenu-trigger {
+	border-radius: 0px!important;
+    background: #ced2d4!important;
+    border: 1px solid #c3ccd5!important;
+    height: 31px;
+}
+/**/
 .topAdjustCustomFunding {
     position: relative;
     top: 7px;
 }
-@media (max-width: 500px) {
+@media (max-width: 744px) {
 
     /* .NewDashTable > tbody > tr > td:nth-child(1), .NewDashTable > tbody > tr > td:nth-child(3) {
     width: 50%!important;
@@ -1320,6 +1405,7 @@ img.riskImage:hover {
     background: whitesmoke!important;
     color: #778D9B!important;
     border-radius: 40px!important;
+        font-size: 13px;
 }
 
 .InfoNewDash {
@@ -1343,6 +1429,10 @@ img.riskImage:hover {
 /************************/
 
 
+
+
+
+/*Prakash*/
 
 /*register_buttons_widget*/
 @media (max-width: 500px) {
@@ -1369,11 +1459,60 @@ img.riskImage:hover {
     margin: 0 auto!important;
 }
 
-/*Prakash*/
+.labelTitleCustom {
+text-align: Center !important;
+    font-weight: bold !important;
+    border-bottom: 2px solid #778d9b;
+}
+
+@media (max-width: 850px) {
+	.editTabsDisabled label {
+	font-size:12px!important;
+	}
+
+	.partialAmtTextbox {
+	font-size:12px!important;
+	}
+}
+
+@media (min-width: 850px){
+.partialAmtTextbox {
+	font-size: 14px!important;
+}
+}
 
 #layout-topbar-menu li:hover > form > a {
     color: #F1F6F9;
     background-color: #009ABB;
+}
+
+@media (max-width: 815px){
+.EmptyResponsive {
+display: none;
+}
+}
+
+@media (max-width: 450px) {
+.Responsive100 {
+	width: 100%;
+}
+}
+
+.internalTabs {
+	    padding: 0!important;
+}
+
+.internalTabs > .ui-accordion-content {
+	border-bottom: 1px solid #808080!important;
+}
+
+.internalTabs > .ui-accordion-header > span:nth-child(1) {
+    background-color: #808080!important;
+    border-radius: 10px;
+    width: 34px;
+    background-repeat: no-repeat!important;
+    background-size: 44%!important;
+    background-position-x: 10px!important;
 }
 
 .ui-accordion-content {
@@ -1386,7 +1525,7 @@ img.riskImage:hover {
     text-transform: capitalize!important;
     font-size: 15px!important;
     font-weight: bold;
-    border-bottom: 2px solid green;
+    border-bottom: 2px solid #808080;
     border-radius: 0!important;
     padding: 5px 5px!important;
 }
