Checked in 01/03/2017 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -177,6 +177,47 @@ img.riskImage:hover {
     }
 }
 
+.msgAdvStatus, .msgAdvAcctName {
+    margin: 5px 0px;
+}
+.msgAdvAcctName > div:nth-child(1) {
+    float: left;
+}
+
+.msgAdvAcctName > div:nth-child(2) {
+    float: right!important;
+}
+
+.msgAdvAcctName > div:nth-child(2) > div {
+    text-align: right!important;
+}
+
+.messageContentAdvNotification {
+    position: relative;
+    top: 10px;
+    margin-bottom: 15px;
+    box-shadow: 1px 1px 3px rgba(128, 128, 128, 0.57);
+}
+
+.messageContentAdvNotification > tbody > tr >td {
+    border: 0!important;
+}
+
+.messageContentAdvNotification > tbody > tr >td:nth-child(2) {
+    border-left: 1px solid #d9e3e8!important;
+    border-right: 1px solid #d9e3e8!important;
+}
+
+@media (max-width: 450px) {
+    .messageContentAdvNotification > tbody > tr >td >div {
+        text-align: center;
+    }
+
+    .messageContentAdvNotification > tbody > tr >td {
+        display: block;
+    }
+}
+
 /**/
 
 
@@ -1430,9 +1471,34 @@ img.riskImage:hover {
 
 
 
-
-
 /*Prakash*/
+
+/*Loader*/
+.tcmLoaderBackground > div:nth-child(1) {
+    pointer-events: none;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.63);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 9999999999999;
+    padding: 260px 0;
+}
+
+.tcmLoaderBackground > div > img {
+    height: 60px;
+    width: 60px;
+}
+
+@media (max-width: 600px) {
+    .tcmLoaderBackground > div > img {
+        height: 40px;
+        width: 40px;
+    }
+}
+/**/
 
 /*register_buttons_widget*/
 @media (max-width: 500px) {
