--- a/Invessence/modules/web/src/main/webapp/resources/uob/css/uob.css
+++ b/Invessence/modules/web/src/main/webapp/resources/uob/css/uob.css
@@ -2817,3 +2817,30 @@ border: solid 1px #26a69a!important;
     box-shadow: none!important;
     border-radius: 0!important;
 }
+
+/*Loader*/
+.tcmLoaderBackground > div:nth-child(1) {
+    pointer-events: none;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.63);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 9999999999999;
+    padding: 260px 0;
+}
+
+.tcmLoaderBackground > div > img {
+    height: 60px;
+    width: 60px;
+}
+
+@media (max-width: 600px) {
+    .tcmLoaderBackground > div > img {
+        height: 40px;
+        width: 40px;
+    }
+}
+/**/
