Checked in 01/06/2017 Ticket 209,215,273,283

--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -3638,3 +3638,12 @@ h3 {
     }
 
 }
+
+.advisorMsgTable > div:nth-child(2) > table > tbody > .ui-state-hover > td {
+    background-color: inherit!important;
+    color: inherit!important;
+}
+
+.advisorMsgTable > div:nth-child(2) > table > tbody > .ui-state-highlight > td {
+    background-color: #009abb!important;
+}
