--- a/Invessence/modules/web/src/main/webapp/template/common/sharedDialog.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/sharedDialog.xhtml
@@ -5,7 +5,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <ui:composition>
-    <p:confirmDialog id="confirmationDialogID" message="#{uiLayout.uiprofile.forwardURL}"
+    <p:confirmDialog id="confirmationDialogID" message="#{uiLayout.webProfile.custodyURL}"
                      header="Exiting this site" severity="alert"
                      widgetVar="confirmDlgVar">
 
