--- a/Invessence/modules/web/src/main/webapp/template/common/simple.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/simple.xhtml
@@ -6,8 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <f:metadata>
-    <f:viewParam name="advisor" value="#{webutil.uiprofile.advisor}"/>
-    <f:viewParam name="rep" value="#{webutil.uiprofile.rep}"/>
+    <f:event listener="#{uiLayout.preRenderView}" type="preRenderView" />
 </f:metadata>
 
 <h:head>
@@ -17,7 +16,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
     </f:facet>
-    <title>#{uiLayout.uiprofile.companyname}</title>
+    <title>#{uiLayout.webProfile.companyname}</title>
     <h:outputScript name="js/ripple-effect.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/perfect-scrollbar.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/layout.js" library="#{uiLayout.themeLib}"/>
@@ -27,6 +26,15 @@
 
 <h:body>
     <ui:include src="#{uiLayout.templateDIR}/nolayout.xhtml"/>
+
+    <ui:fragment rendered="#{uiLayout.webProfile.hasCustomcss}">
+        <h:outputStylesheet name="#{uiLayout.webProfile.customcss}" library="#{uiLayout.webProfile.cssdir}"/>
+    </ui:fragment>
+    <ui:fragment rendered="#{uiLayout.webProfile.hasGoogleAnalytic}">
+        <h:outputStylesheet name="#{uiLayout.webProfile.googleAnalytic}"
+                            library="#{uiLayout.webProfile.cssdir}"/>
+    </ui:fragment>
+
 </h:body>
 
 </html>
