--- a/Invessence/modules/web/src/main/webapp/template/common/spark/nolayout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/nolayout.xhtml
@@ -24,14 +24,7 @@
     <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
     <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
     <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-    <h:outputStylesheet name="css/font-modena.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/modena-font.css" library="spark-layout"/>
     <h:outputStylesheet name="css/invessence.css" library="invessence"/>
-    <ui:fragment rendered="#{uiLayout.customCSS != null}">
-        <h:outputStylesheet name="#{uiLayout.customCSS}" library="#{uiLayout.cssDIR}"/>
-    </ui:fragment>
-    <ui:fragment rendered="#{uiLayout.uiprofile.googleAnalytic != null}">
-        <h:outputStylesheet name="#{uiLayout.uiprofile.googleAnalytic}" library="#{uiLayout.cssDIR}"/>
-    </ui:fragment>
-
 
 </ui:composition>
